# model-benchmark

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: adapters.md  hobbyist_anthropic_baseline.md
src/mrbench/: __init__.py  __main__.py
src/mrbench/adapters/: __init__.py  anthropic.py  base.py  claude.py  codex.py  fake.py  gemini.py  goose.py  llamacpp.py  ollama.py  openai.py  opencode.py  registry.py  vllm.py
src/mrbench/cli/: __init__.py  _output.py  bench.py  detect.py  discover.py  doctor.py  main.py  models.py  providers.py  report.py  route.py  run.py
src/mrbench/core/: __init__.py  benchmark.py  config.py  discovery.py  executor.py  redaction.py  router.py  storage.py
src/mrbench/reporters/: __init__.py
suites/: basic.yaml  coding.yaml  hobbyist_anthropic_baseline.yaml  reasoning.yaml
tests/: __init__.py  conftest.py
tests/adapters/: __init__.py  test_anthropic.py  test_fake.py  test_goose.py  test_llamacpp.py  test_ollama.py  test_openai.py  test_prompt_privacy.py  test_registry.py  test_vllm.py
tests/integration/: __init__.py  test_cli.py  test_real_adapter_stdio.py
tests/unit/: test_benchmark.py  test_config.py  test_discovery.py  test_executor.py  test_redaction.py  test_router.py  test_storage.py  test_version.py
